--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
     <script src="js/index.js"></script>c
-    <script src="js/function.js"></script>
+    <script src="js/functions.js"></script>
     <script src="js/fetures.js"></script>
     
 </body>
