--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
     <script src="js/index.js"></script>c
     <script src="js/functions.js"></script>
     <script src="js/fetures.js"></script>
+    <script src="js/home.js"></script>
     
 </body>
 </html>
